--- a/제로초 인강/index.html
+++ b/제로초 인강/index.html
@@ -18,11 +18,21 @@
             display: inline-block;
             background-color: yellow;
         }
+        #header {
+            text-align: left;
+        }
         #header-hamburger {
             margin-top: 18px;
-            background-color: blue;
-            width: 46px;
-            height: 46px;
+            padding: 10px;
+            display: inline-block;
+        }
+        #header-hamburger > div {
+            background-image: url(./sp_main.png);
+            width: 32px;
+            height: 32px;
+            background-repeat: no-repeat;
+            background-size: 463px 440px;
+            background-position: -311px -166px;
         }
         #main {
             height: 2000px;
@@ -34,7 +44,7 @@
         <div id="wrap-center">
             <div id="header">
                 <div id="header-hamburger">
-
+                    <div></div>
                 </div>
             </div>
             <div id="search"></div>
