--- a/제로초 인강/index.html
+++ b/제로초 인강/index.html
@@ -97,6 +97,7 @@
         #header-hamburger:hover::before {
             position: absolute;
             content: '';
+            z-index: 0;
             left: 1px;
             top: 1px;
             width: 44px;
@@ -108,12 +109,22 @@
             background-image: url(./sp_main.png);
             width: 26px;
             height: 26px;
+            position: relative;
+            z-index: 1;
             background-repeat: no-repeat;
             background-size: 463px 440px;
             background-position: -311px -166px;
         }
         #main {
             height: 2000px;
+        }
+        .blind {
+            position: absolute;
+            clip: rect(0 0 0 0);
+            width: 1px;
+            height: 1px;
+            margin: -1px;
+            overflow: hidden;
         }
     </style>
 </head>
@@ -122,7 +133,10 @@
         <div id="wrap-center">
             <div id="header">
                 <button id="header-hamburger">
+                    <!-- ::before -->
                     <div></div>
+                    <span class="blind">확장 영역</span>
+                    <!-- ::after -->
                 </button>
             </div>
             <div id="search"></div>
