--- a/제로초 인강/index.html
+++ b/제로초 인강/index.html
@@ -68,6 +68,9 @@
             --color_dic: #031f5f;
             --color_dic_rgb: 3, 31, 95;
         }
+        * {
+            box-sizing: border-box;
+        }
         html, body {
             margin: 0;
             padding: 0;
@@ -84,17 +87,16 @@
             text-align: left;
             position: relative;
         }
-        #header-hamburger {
+        #header-hamburger, #header-notice, #header-naverpay { 
             position: absolute;
             top: 18px;
-            left: -10px;
             padding: 10px;
             display: inline-block;
             background: none;
             border: none;
             cursor: pointer;
         }
-        #header-hamburger:hover::before {
+        #header-hamburger:hover::before, #header-notice:hover::before, #header-naverpay:hover::before {
             position: absolute;
             content: '';
             z-index: 0;
@@ -105,7 +107,7 @@
             background-color: var(--color_option_bg);
             border-radius: 50%;
         }
-        #header-hamburger > div {
+        #header-hamburger > div, #header-notice > div, #header-naverpay > div {
             background-image: url(./sp_main.png);
             width: 26px;
             height: 26px;
@@ -113,7 +115,26 @@
             z-index: 1;
             background-repeat: no-repeat;
             background-size: 463px 440px;
+        }
+        #header-hamburger {
+            left: -10px;
+        }
+        #header-hamburger > div {
             background-position: -311px -166px;
+        }
+        #header-naverpay {
+            right: 42px;
+            padding: 10px 8px;
+        }
+        #header-naverpay > div {
+            width: 30px;
+            background-position: -33px -316px;
+        }
+        #header-notice {
+            right: -10px;
+        }
+        #header-notice > div {
+            background-position: -311px -232px;
         }
         #main {
             height: 2000px;
@@ -136,6 +157,18 @@
                     <!-- ::before -->
                     <div></div>
                     <span class="blind">확장 영역</span>
+                    <!-- ::after -->
+                </button>
+                <button id="header-naverpay">
+                    <!-- ::before -->
+                    <div></div>
+                    <span class="blind">네이버 페이</span>
+                    <!-- ::after -->
+                </button>
+                <button id="header-notice">
+                    <!-- ::before -->
+                    <div></div>
+                    <span class="blind">알림</span>
                     <!-- ::after -->
                 </button>
             </div>
