--- a/제로초 인강/index.html
+++ b/제로초 인강/index.html
@@ -71,12 +71,17 @@
         * {
             box-sizing: border-box;
         }
-        html, body, form {
+        html, body {
             font-size: 10.5px;
             line-height: 10.5px;
             margin: 0;
             padding: 0;
+            letter-spacing: -0.4px;
             font-family: -apple-system,BlinkMacSystemFont,"Malgun Gothic","맑은 고딕",helvetica,"Apple SD Gothic Neo",sans-serif;
+        }
+        form, ul {
+            margin: 0;
+            padding: 0;
         }
         #wrap {
             text-align: center;
@@ -304,6 +309,9 @@
                 </form>
             </div>
             <style>
+                #nav {
+                    margin: 12px;
+                }
                 #nav > ul {
                     display: flex;
                     list-style-type: none;
@@ -313,6 +321,22 @@
                 }
                 #nav a {
                     text-decoration: none;
+                    text-align: center;
+                }
+                #nav a div {
+                    position: relative;
+                }
+                #nav a div::after {
+                    position: relative;
+                    z-index: 1;
+                    content: "";
+                    margin: 2px;
+                    display: inline-block;
+                    background-image: url(https://pm.pstatic.net/resources/asset/sp_main.b27083b1.png);
+                    background-size: 463px 440px;
+                    background-repeat: no-repeat;
+                    width: 40px;
+                    height: 40px;
                 }
                 #nav a:visited {
                     color: black;
@@ -320,12 +344,66 @@
                 #nav li {
                     width: 64px;
                     margin-left: 4px;
+                    display: flex;
                 }
                 #nav li:nth-of-type(1) {
                     margin-left: 0;
                 }
-                #nav li:nth-of-type(2) {
-                    
+                #nav li a div::before {
+                    content: "";
+                    display: block;
+                    position: absolute;
+                    top: -1px;
+                    left: -3px;
+                    background-image: url(https://pm.pstatic.net/resources/asset/sp_main.b27083b1.png);
+                    background-size: 463px 440px;
+                    background-position: -153px -142px;
+                    background-repeat: no-repeat;
+                    width: 50px;
+                    height: 50px;
+                }
+                #nav li:nth-of-type(1) a div::after {
+                    background-position: -205px -219px;
+                }
+                #nav li:nth-of-type(2) a div::after {
+                    background-position: -41px -219px;
+                }
+                #nav li:nth-of-type(3) a div::after {
+                    background-position: 0px -219px;;
+                }
+                #nav li:nth-of-type(4) a div::after {
+                    background-position: -41px -260px;
+                }
+                #nav li:nth-of-type(5) a div::after {
+                    background-position: -270px -205px;
+                }
+                #nav li:nth-of-type(6) a div::after {
+                    background-position: -123px -260px;
+                }
+                #nav li:nth-of-type(7) a div::after {
+                    background-position: 0px -260px;
+                }
+                #nav li:nth-of-type(8) a div::before {
+                    left: 0;
+                }
+                #nav li:nth-of-type(8) a div::after {
+                    background-position: -270px 0px;
+                    width: 48px;
+                    height: 48px;
+                    top: -2;
+                }
+                #nav li:nth-of-type(9) a div::after {
+                    background-position: -164px -260px;
+                }
+                #nav li:nth-of-type(10) a div::after {
+                    background-position: -270px -123px;
+                }
+                #nav li a span {
+                    display: inline-block;
+                    margin-top: 7px;
+                }
+                #nav li:nth-of-type(8) a span {
+                    margin-top: 3px;
                 }
             </style>
             <div id="nav">
