--- a/깃허브 페이지 과제/index.html
+++ b/깃허브 페이지 과제/index.html
@@ -37,7 +37,44 @@
             <button id="nav-right-btn-sign-up">Sign up</button>
         </div>
     </div>
-    <div id="main"></div>
+    <div id="main">
+        <div id="main-left">
+            <h1>Built for<br/>developers</h1>
+            <p>
+            Github is a development platform inspired by the<br/>
+            way you work. From <span>open source</span> to <span>business</span>, you<br/>
+            can host and review code, manage projects, and<br/>
+            build software alongside 50 million developers.
+            </p>
+        </div>
+        <div id="main-right">
+            <form action="">
+                <div class="label-and-input">
+                    <label for="username">Username</label>
+                    <input type="text" placeholder=".">
+                </div>
+                <div class="label-and-input">
+                    <label for="email">Email</label>
+                    <input type="email" placeholder=".">
+                </div>
+                <div class="label-and-input">
+                    <label for="password">Password</label>
+                    <input type="password" placeholder=".">
+                </div>
+                <p>
+                    Make sure it's at least 15 characters OR at least 8 characters including a
+                    number and a lowercase letter. <a href="#">Learn more.</a>
+                </p>
+                <button>Sign up for Github</button>
+            </form>
+            <div id="main-right-privacy-notice">
+                <p>
+                    By clicking "sign up for Github", you agree to our <a href="#">Terms of Service</a> and
+                    <a href="#">Privacy Statement</a>. We'll occasionally send you account related emails.
+                </p>
+            </div>
+        </div>
+    </div>
     <div id="footer"></div>
 </body>
 </html>
