--- a/깃허브 페이지 과제/index.html
+++ b/깃허브 페이지 과제/index.html
@@ -8,6 +8,7 @@
     <title>Github(아님)</title>
 </head>
 <body>
+    <div id="topside">
     <div id="nav">
         <div id="nav-left">
             <button id="nav-left-logo"><svg height="32" aria-hidden="true" viewBox="0 0 24 24" version="1.1" width="32" data-view-component="true" class="octicon octicon-mark-github">
@@ -75,6 +76,11 @@
             </div>
         </div>
     </div>
-    <div id="footer"></div>
+    </div>
+    <div id="footer">
+        <div id="footer-image-container">
+            <img id="footer-image" src="./footer.png">
+        </div>
+    </div>
 </body>
 </html>
