--- a/피로그래밍 홈페이지/portfolio.html
+++ b/피로그래밍 홈페이지/portfolio.html
@@ -20,6 +20,11 @@
             <a href="#">Gallery</a>
             <a href="#">Recruit</a>
         </div>
+        <div class="header-hamburger">
+            <div class="hamburger-elem"></div>
+            <div class="hamburger-elem"></div>
+            <div class="hamburger-elem"></div>
+        </div>
     </header>
     <main id="main">
         <div id="main-header">
@@ -36,11 +41,11 @@
                     <div class="portfolio-name">HireHub</div>
                     <div class="portfolio-description">효율적인 인재 영입의 시작</div>
                     <div class="portfolio-members">
-                        <div>김은성</div>
-                        <div>김은성</div>
-                        <div>김은성</div>
-                        <div>김은성</div>
-                        <div>김은성</div>
+                        <div>이건희</div>
+                        <div>손영웅</div>
+                        <div>장지요</div>
+                        <div>전지훈</div>
+                        <div>주유민</div>
                     </div>
                 </div>
                 <div class="portfolio-hamburger">
@@ -51,17 +56,16 @@
             </div>
             <div class="portfolio-container">
                 <div class="portfolio-image">
-                    <img src="https://piro-homepage-bucket.s3.ap-northeast-2.amazonaws.com/portfolio/20241030/hirehub_logo514.jpg" alt="project logo">
+                    <img src="https://piro-homepage-bucket.s3.ap-northeast-2.amazonaws.com/portfolio/20241030/%E1%84%91%E1%85%B5%E1%86%AF%E1%84%87%E1%85%A5%E1%84%83%E1%85%B5_%E1%84%85%E1%85%A9%E1%84%80%E1%85%A9905.png" alt="project logo">
                 </div>
                 <div class="portfolio-text-container">
-                    <div class="portfolio-name">HireHub</div>
-                    <div class="portfolio-description">효율적인 인재 영입의 시작</div>
+                    <div class="portfolio-name">Feel Buddy</div>
+                    <div class="portfolio-description">진정한 '나'를 찾는 여정</div>
                     <div class="portfolio-members">
-                        <div>김은성</div>
-                        <div>김은성</div>
-                        <div>김은성</div>
-                        <div>김은성</div>
-                        <div>김은성</div>
+                        <div>나예원</div>
+                        <div>최승호</div>
+                        <div>전진명</div>
+                        <div>이민수</div>
                     </div>
                 </div>
                 <div class="portfolio-hamburger">
@@ -72,17 +76,16 @@
             </div>
             <div class="portfolio-container">
                 <div class="portfolio-image">
-                    <img src="https://piro-homepage-bucket.s3.ap-northeast-2.amazonaws.com/portfolio/20241030/hirehub_logo514.jpg" alt="project logo">
+                    <img src="https://piro-homepage-bucket.s3.ap-northeast-2.amazonaws.com/portfolio/20241030/aayo_logo761.png" alt="project logo">
                 </div>
                 <div class="portfolio-text-container">
-                    <div class="portfolio-name">HireHub</div>
-                    <div class="portfolio-description">효율적인 인재 영입의 시작</div>
+                    <div class="portfolio-name">AAYO</div>
+                    <div class="portfolio-description">간편한 단체 커피 주문을 위한 카페 메뉴 취합 서비스</div>
                     <div class="portfolio-members">
-                        <div>김은성</div>
-                        <div>김은성</div>
-                        <div>김은성</div>
-                        <div>김은성</div>
-                        <div>김은성</div>
+                        <div>안시환</div>
+                        <div>김민수</div>
+                        <div>이송민</div>
+                        <div>이지현</div>
                     </div>
                 </div>
                 <div class="portfolio-hamburger">
@@ -93,17 +96,16 @@
             </div>
             <div class="portfolio-container">
                 <div class="portfolio-image">
-                    <img src="https://piro-homepage-bucket.s3.ap-northeast-2.amazonaws.com/portfolio/20241030/hirehub_logo514.jpg" alt="project logo">
+                    <img src="https://piro-homepage-bucket.s3.ap-northeast-2.amazonaws.com/portfolio/20241030/%E1%84%91%E1%85%B5%E1%84%85%E1%85%A9%E1%84%90%E1%85%A1%E1%84%8B%E1%85%B5%E1%86%B7675.png" alt="project logo">
                 </div>
                 <div class="portfolio-text-container">
-                    <div class="portfolio-name">HireHub</div>
-                    <div class="portfolio-description">효율적인 인재 영입의 시작</div>
+                    <div class="portfolio-name">피로타임(PiroTime)</div>
+                    <div class="portfolio-description">피로그래머들을 위한 커뮤니티 플랫폼</div>
                     <div class="portfolio-members">
-                        <div>김은성</div>
-                        <div>김은성</div>
-                        <div>김은성</div>
-                        <div>김은성</div>
-                        <div>김은성</div>
+                        <div>김주희</div>
+                        <div>손관우</div>
+                        <div>이수용</div>
+                        <div>이연진</div>
                     </div>
                 </div>
                 <div class="portfolio-hamburger">
@@ -114,17 +116,16 @@
             </div>
             <div class="portfolio-container">
                 <div class="portfolio-image">
-                    <img src="https://piro-homepage-bucket.s3.ap-northeast-2.amazonaws.com/portfolio/20241030/hirehub_logo514.jpg" alt="project logo">
+                    <img src="https://piro-homepage-bucket.s3.ap-northeast-2.amazonaws.com/portfolio/20241030/%E1%84%8B%E1%85%A9%E1%84%83%E1%85%B5_%E1%84%85%E1%85%A9%E1%84%80%E1%85%A9663.png" alt="project logo">
                 </div>
                 <div class="portfolio-text-container">
-                    <div class="portfolio-name">HireHub</div>
-                    <div class="portfolio-description">효율적인 인재 영입의 시작</div>
+                    <div class="portfolio-name">Oddy</div>
+                    <div class="portfolio-description">설레는 여행 계획하기, 오디와 함께해요!</div>
                     <div class="portfolio-members">
-                        <div>김은성</div>
-                        <div>김은성</div>
-                        <div>김은성</div>
-                        <div>김은성</div>
-                        <div>김은성</div>
+                        <div>유태연</div>
+                        <div>고화현</div>
+                        <div>이의진</div>
+                        <div>편선아</div>
                     </div>
                 </div>
                 <div class="portfolio-hamburger">
@@ -135,17 +136,17 @@
             </div>
             <div class="portfolio-container">
                 <div class="portfolio-image">
-                    <img src="https://piro-homepage-bucket.s3.ap-northeast-2.amazonaws.com/portfolio/20241030/hirehub_logo514.jpg" alt="project logo">
+                    <img src="https://piro-homepage-bucket.s3.ap-northeast-2.amazonaws.com/portfolio/20241030/%E1%84%83%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%A1%E1%84%85%E1%85%B5%E1%84%90%E1%85%A1%E1%84%8B%E1%85%B5%E1%86%B7_logo610.png" alt="project logo">
                 </div>
                 <div class="portfolio-text-container">
-                    <div class="portfolio-name">HireHub</div>
-                    <div class="portfolio-description">효율적인 인재 영입의 시작</div>
+                    <div class="portfolio-name">동아리타임</div>
+                    <div class="portfolio-description">동아리 소통과 만남의 필수 앱, 동아리타임!</div>
                     <div class="portfolio-members">
-                        <div>김은성</div>
-                        <div>김은성</div>
-                        <div>김은성</div>
-                        <div>김은성</div>
-                        <div>김은성</div>
+                        <div>나경원</div>
+                        <div>강민석</div>
+                        <div>하동현</div>
+                        <div>한라현</div>
+                        <div>황다예</div>
                     </div>
                 </div>
                 <div class="portfolio-hamburger">
