--- a/Javascript 스톱워치 과제/index.html
+++ b/Javascript 스톱워치 과제/index.html
@@ -17,19 +17,19 @@
         </header>
         <section class="stopwatch">
             <div class="stopwatch-display">
-                <p>00:00</p>
+                <p id="display-time">00:00</p>
             </div>
             <div class="stopwatch-buttons">
-                <button>start</button>
-                <button>stop</button>
-                <button>reset</button>
+                <button id="btn-start">start</button>
+                <button id="btn-stop">stop</button>
+                <button id="btn-reset">reset</button>
             </div>
         </section>
         <section class="record">
             <div class="record-header">
                 <input id="check-all" class="checkbox-circle" type="checkbox">
                 <h2>구간 기록</h2>
-                <button>
+                <button id="btn-delete">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
                         <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06m6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528M8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5"/>
                     </svg>
@@ -37,18 +37,10 @@
             </div>
             <div class="records">
                 <!-- 구간 기록 요소들 동적으로 추가 -->
-                <div class="record-item">
-                    <input class="checkbox-circle" type="checkbox">
-                    <h2>04 : 74</h2>
-                    <div></div>
-                </div>
-                <div class="record-item">
-                    <input class="checkbox-circle" type="checkbox">
-                    <h2>04 : 74</h2>
-                    <div></div>
-                </div>
             </div>
         </section>
     </main>
+
+    <script src="stopwatch.js"></script>
 </body>
 </html>
