--- a/Javascript 스톱워치 과제/index.html
+++ b/Javascript 스톱워치 과제/index.html
@@ -13,8 +13,12 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-stopwatch-fill" viewBox="0 0 16 16">
                 <path d="M6.5 0a.5.5 0 0 0 0 1H7v1.07A7.001 7.001 0 0 0 8 16a7 7 0 0 0 5.29-11.584l.013-.012.354-.354.353.354a.5.5 0 1 0 .707-.707l-1.414-1.415a.5.5 0 1 0-.707.707l.354.354-.354.354-.012.012A6.97 6.97 0 0 0 9 2.071V1h.5a.5.5 0 0 0 0-1zm2 5.6V9a.5.5 0 0 1-.5.5H4.5a.5.5 0 0 1 0-1h3V5.6a.5.5 0 1 1 1 0"/>
             </svg>
-            <h1>피로그래밍 스톱워치</h1>
+            <h1 id="title">피로그래밍 스톱워치</h1>
         </header>
+        <section class="options">
+            <button id="btn-mode-stopwatch" class="option-selected">스톱워치</button>
+            <button id="btn-mode-timer">타이머</button>
+        </section>
         <section class="stopwatch">
             <div class="stopwatch-display">
                 <p id="display-time">00:00</p>
@@ -39,8 +43,18 @@
                 <!-- 구간 기록 요소들 동적으로 추가 -->
             </div>
         </section>
+        <section class="timer-setting no-display">
+            <h2>타이머 설정 (초)</h2>
+            <div class="timer-setting-inputs">
+                <input id="timer-set-input" class="timer-set-input" type="number" maxlength="2">
+                <button id="btn-timer-set">set</button>
+            </div>
+            </div>
+        </section>
     </main>
 
-    <script src="stopwatch.js"></script>
+    <script type="module" src="stopwatch.js"></script>
+    <script type="module" src="modeController.js"></script>
+    <script type="module" src="timer.js"></script>
 </body>
 </html>
